# ZimeSub

./: CONTEXT.md  bun.lockb  index.html  package.json  tsconfig.json
.scratch/zimesub-v1/: prd.md
.scratch/zimesub-v1/issues/: 0001-app-shell-foundation.md  0002-required-tool-detection.md  0003-install-tools-via-winget.md  0004-create-project.md  0005-drag-drop-episodes.md  0006-list-subtitle-tracks.md  0007-extract-subtitle-job.md  0008-tiered-job-queue-status-bar.md  0009-extract-audio-job.md  0010-translate-stage-helpers.md  0011-render-job-encoder-probe.md  0012-project-lifecycle.md  README.md
docs/: style-guide.md
docs/adr/: 0001-source-mkv-path-only.md  0002-tooling-via-winget.md  0003-tiered-job-queue.md  0004-render-encoder-and-path-handling.md
scripts/: lint-forbidden-classes.mjs
src/: App.tsx  index.css  index.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ass_ops.rs  commands.rs  duration_probe.rs  encoder_probe.rs  episode_state.rs  install.rs  job_queue.rs  lib.rs  logging.rs  main.rs  mkv_probe.rs  paths.rs  process_runner.rs  progress_parsers.rs  project_store.rs  settings_store.rs  tooling.rs
src/api/: dialog.ts  extract.ts  install.ts  jobs.ts  mkv_probe.ts  opener.ts  projects.ts  render.ts  settings.ts  tooling.ts  translate.ts
src/components/drop-overlay/: DropOverlay.tsx
src/design-system/: Button.tsx  Modal.tsx  ProgressBar.tsx  StatusBadge.tsx  Stepper.tsx  TerminalLog.tsx  ToastStack.tsx
src/lib/: time.ts
src/stores/: jobs.ts  projects.ts  settings.ts  tools.ts
(+28 files in other folders)
