[package]
name = "zimesub"
version = "0.1.0"
description = "Pipeline làm phụ đề tiếng Việt cho anime"
authors = ["PhuVinhAI"]
license = "MIT"
repository = "https://github.com/PhuVinhAI/ZimeSub"
default-run = "zimesub"
edition = "2024"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "zimesub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0.150"
serde = { version = "1.0.228", features = ["derive"] }
tauri = { version = "2.11.2", features = [] }
tauri-plugin-devtools = "2.1.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.dev]
incremental = true      # Compile your binary in smaller steps.

[profile.release]
strip = true            # Automatically strip symbols from the binary
panic = "abort"         # Strip expensive panic clean-up logic
codegen-units = 1       # Compile crates one after another so the compiler can optimize better
lto = true              # Enables link to optimizations
opt-level = "s"         # Optimize for binary size. Use `3` if you prefer speed.
